--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -12,8 +12,8 @@
   align-items: center;
 }
 .navbar_box_right .navbar_inner_box_circle {
-  width: 70px;
-  height: 70px;
+  min-width: 70px;
+  min-height: 70px;
   display: flex;
   align-items: center;
   justify-content: center;
