--- a/src/components/Timer/Timer.css
+++ b/src/components/Timer/Timer.css
@@ -22,12 +22,12 @@
   width: 100%;
   height: 100%;
   fill: none;
-  stroke: #191919;
+  /* stroke: #191919; */
   stroke-width: 3.5px;
   transform: translate(5px, 5px);
 }
 .timer svg circle:nth-child(2) {
-  stroke: #4caf50;
+  stroke: var(--main-color);
   stroke-dasharray: 440;
   stroke-dashoffset: 440;
 }
@@ -47,6 +47,7 @@
   inset: 5px;
   border-radius: 50%;
   z-index: 10;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .animateDot {
   animation: animateDot 60s linear forwards;
@@ -58,10 +59,10 @@
   left: 50%;
   width: 12px;
   height: 12px;
-  background-color: #4caf50;
+  background-color: var(--main-color);
   border-radius: 50%;
   transform: translateX(-50%);
-  box-shadow: 0 0 10px #4caf50, 0 0 30px #4caf50;
+  box-shadow: 0 0 10px var(--main-color), 0 0 30px var(--main-color);
 }
 @keyframes animateDot {
   0% {
@@ -81,6 +82,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column !important;
   font-size: 3rem;
   font-family: Arial, Helvetica, sans-serif;
+}
+.timer .sec_text {
+  font-size: 14px;
+  margin-top: -5px;
+  font-family: "Tahere", "Iran Sans", Tahoma, sans-serif;
 }
